# kowalski-os

./: .ansible-lint  .gitignore  .yamllint  Makefile  README.md  kowalski-os-plan.md  requirements-dev.txt
.github/workflows/: ci.yml
core/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
core/kowalski/: api.py  bootstrap.py  cli.py  config.py  conversations.py  convsearch.py  daemon.py  heartbeat.py  journal.py  platform.py  plugins.py  policy.py  safety.py  sandbox.py  scheduler.py  settings_cli.py  settings_schema.py  store.py  summarizer.py
core/kowalski/agent/: events.py  llm.py  loop.py  planner.py  prompts.py  pydantic_llm.py
core/kowalski/ipc/: __init__.py  base.py  client.py  dbus_service.py  socket_service.py
core/kowalski/mail/: __init__.py  backend.py  drafts.py  imap_smtp.py  mock.py  types.py
core/kowalski/memory/: __init__.py  context.py  embedder.py  store.py
core/kowalski/recipes/: __init__.py  engine.py  model.py  store.py
core/kowalski/tools/: apps.py  base.py  bluetooth.py  checklist.py  files.py  mail.py  mcp.py  memory.py  notes.py  recipes.py  registry.py  reminders.py  search.py  shell.py  system.py  toolbox.py  uiauto.py  vision.py
core/kowalski/uiauto/: __init__.py  desktop.py
core/kowalski/vision/: __init__.py  capture.py  describe.py
core/tests/: conftest.py  fake_llm.py  test_agent_loop.py  test_cli_chat.py  test_cli_plan.py  test_config.py  test_conversations.py  test_convsearch.py  test_dbus_ipc.py  test_heartbeat.py  test_integration_ollama.py  test_ipc_client.py  test_journal.py  test_memory.py  test_planner.py  test_plugins.py  test_policy.py  test_pydantic_llm.py  test_recipes.py  test_registry.py  test_safety.py  test_socket_ipc.py  test_summarizer.py  test_toolbox_adapter.py  test_tools_bluetooth.py  test_tools_checklist.py  test_tools_files.py  test_tools_mail.py  test_tools_mcp.py  test_tools_memory.py  test_tools_notes_reminders.py  test_tools_recipes.py  test_tools_search.py  test_tools_semantic.py  test_tools_shell.py  test_tools_uiauto.py  test_tools_vision.py
docker/ubuntu-dev/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  PACKAGING.md  PROVISIONING.md  README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_IT.md  README_JA.md  README_KR.md  README_PT.md  README_RU.md  README_ZH.md  architecture.md  packaging.md  provisioning.md
indexer/: README.md  pyproject.toml
indexer/kowindex/: __init__.py  api.py  chunker.py  cli.py  embedder.py  scanner.py  settings.py  store.py  watcher.py
indexer/tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_scanner.py  test_store.py
packaging/deb/: Dockerfile  build-deb.sh  verify-deb.sh
packaging/systemd/: kowalski-core.service
packaging/theme/: apply-theme.sh  kowalski-onboarding  kowalski-onboarding.desktop  kowalski-voice-chat  kowalski-voice-chat.desktop
provision/: ansible.cfg  autoupdate.sh  deploy.sh  deploy.yml  local.yml  site.yml
provision/autoinstall/: README.md  autoinstall.yaml
provision/files/: firstboot.sh  kowalski-firstboot.service
provision/group_vars/: all.yml
provision/inventories/remote/: hosts.yml.example
provision/roles/base/files/: 99-kowalski.conf  kowalski-governor.service  kowalski-limits.conf
provision/roles/base/handlers/: main.yml
provision/roles/base/tasks/: main.yml
provision/roles/desktop/files/: 50-kowalski.conf
provision/roles/desktop/tasks/: main.yml
provision/roles/docker/handlers/: main.yml
provision/roles/docker/tasks/: main.yml
provision/roles/kowalski/files/: kowalski-core.service
provision/roles/kowalski/tasks/: main.yml
provision/test/: Dockerfile  run-smoke.sh
setup/: pyproject.toml
setup/kow_setup/: answers.example.yaml  checks.py  cli.py  config.py  core.py  installers.py
setup/tests/: test_checks.py  test_cli.py  test_config.py  test_core.py
ui/: README.md  pyproject.toml
ui/kowui/: __init__.py  app.py  client.py  clipboard.py  controller.py  gtk_view.py  tty.py
ui/tests/: conftest.py  test_client.py  test_clipboard.py  test_controller.py  test_tty.py
voice/: README.md  pyproject.toml
voice/kowvoice/: agent_socket.py  audio_devices.py  chat.py  cli.py  cues.py  desktop.py  echo.py  mic_select.py  mocks.py  orchestrator.py  protocols.py  segmenter.py  selftest.py  settings.py  speaker_select.py  stt_http.py  train.py  train_bundle.py  tts_http.py  types.py  wake_fit.py  wake_record.py  wake_setup.py
voice/tests/: conftest.py  test_chat.py  test_cli.py  test_http_clients.py  test_orchestrator.py  test_segmenter.py  test_selftest.py  test_settings.py  test_train.py  test_wake.py
(+12 files in other folders)
