[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kowalski"
version = "0.1.0"
description = "Kowalski OS agent core: agentic daemon, tool registry, security policies"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.6",
    "apscheduler>=3.10,<4",
    "psutil>=5.9",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dbus = ["dasbus>=1.7"]
# KOW_LLM=pydantic-ai transport + fs.* tools from pydantic-ai-toolbox
pydantic-ai = ["pydantic-ai-slim[openai]>=1.0", "pydantic-ai-toolbox>=0.0.1"]

[project.scripts]
kow = "kowalski.cli:main"

[tool.setuptools.packages.find]
include = ["kowalski*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that need a live Ollama server (KOW_TEST_OLLAMA=1)",
    "linux: tests that need a Linux session D-Bus",
]

[tool.ruff]
line-length = 100
target-version = "py312"
