[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kow-setup"
version = "0.1.0"
description = "Kowalski OS first-run setup: service endpoints, validation, config"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
kow-setup = "kow_setup.cli:main"

[tool.setuptools.packages.find]
include = ["kow_setup*"]

[tool.ruff]
line-length = 100
